// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField rendering adds the error class if the error is set 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    counter={null}
    error={true}
    htmlFor="random-id"
    text="Label"
  />
  <Layer
    aria-describedby="random-id-error"
    aria-invalid={true}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize TextAreaField--error"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    id="random-id-error"
    text="Error"
  />
</div>
`;

exports[`TextAreaField rendering does not add the resize class if the resize is true 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    counter={null}
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    counter={null}
    error={false}
    htmlFor="random-id"
    required={true}
    text="Label"
  />
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-required={true}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<div
  className="TextAreaField TestClass"
>
  <LabelLine
    counter={null}
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements when showCounter is true 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    counter="5/10"
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`TextAreaField rendering renders expected elements when value is empty 1`] = `
<div
  className="TextAreaField"
>
  <LabelLine
    counter={null}
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <Layer
    aria-describedby="random-id-helper"
    aria-invalid={false}
    as="textarea"
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value=""
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;
